Added S3 bucket encryption by default

--- a/Solutions/AWSSCV-CTRLogger/CloudFormation/awsscv_ctr_logger.yaml
+++ b/Solutions/AWSSCV-CTRLogger/CloudFormation/awsscv_ctr_logger.yaml
@@ -62,6 +62,10 @@ Resources:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
       BucketName:
         !Join
         - ''
